--- a/week1_pie1.html
+++ b/week1_pie1.html
@@ -24,23 +24,11 @@
         width: 100%;
         height: 100%;
       }
-      #chart-title {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: #ffffff;
-        font-size: 18px;
-        font-weight: 500;
-        font-family: 'DM Sans', sans-serif;
-        pointer-events: none;
-      }
     </style>
   </head>
   <body>
     <div class="chart-container">
       <div id="chart"></div>
-      <div id="chart-title">Week 1</div>
     </div>
 
     <script>
@@ -60,16 +48,14 @@
 
         const options = {
           backgroundColor: "#191919",
-          pieHole: 0.55,
           legend: {
             position: "bottom",
             textStyle: { color: "#DDDDDD", fontName: "DM Sans", fontSize: 13 }
           },
-          // Show numbers on slices
-          pieSliceText: "value",
+          // Show percentages on slices
+          pieSliceText: "percentage",
           pieSliceTextStyle: { fontName: "DM Sans", fontSize: 12, color: "#FFFFFF" },
-          // Show percentages only on hover
-          tooltip: { text: "percentage" },
+          tooltip: { text: "value" }, // Tooltip shows raw numbers
           chartArea: { width: "80%", height: "70%" },
           colors: ["#4CAF70", "#E8C547", "#5C8DFF", "#A7A9BE", "#6C757D", "#CED4DA"],
           pieSliceBorderColor: "#191919"
