--- a/week1_pie1.html
+++ b/week1_pie1.html
@@ -60,16 +60,16 @@
 
         const options = {
           backgroundColor: "#191919",
-          pieHole: 0.55, // donut
+          pieHole: 0.55, // donut chart
           legend: {
             position: "bottom",
             textStyle: { color: "#DDDDDD", fontName: "DM Sans", fontSize: 13 }
           },
-          // Show numbers on slices
+          // Numbers only on slices
           pieSliceText: "value",
           pieSliceTextStyle: { fontName: "DM Sans", fontSize: 12, color: "#FFFFFF" },
-          // Show percentages only on hover
-          tooltip: { text: "percentage" },
+          // Tooltip also shows numbers only
+          tooltip: { text: "value" },
           chartArea: { width: "80%", height: "70%" },
           // Softer, distinct colors
           colors: ["#6DC36D", "#F2C94C", "#5C8DFF", "#9B51E0", "#EB5757", "#828282"],
