--- a/week1_pie1.html
+++ b/week1_pie1.html
@@ -65,10 +65,10 @@
             position: "bottom",
             textStyle: { color: "#DDDDDD", fontName: "DM Sans", fontSize: 13 }
           },
-          // Numbers only on slices
-          pieSliceText: "value",
+          // Show percentages on slices
+          pieSliceText: "percentage",
           pieSliceTextStyle: { fontName: "DM Sans", fontSize: 12, color: "#FFFFFF" },
-          // Tooltip also shows numbers only
+          // Tooltip shows numbers only
           tooltip: { text: "value" },
           chartArea: { width: "80%", height: "70%" },
           // Softer, distinct colors
