--- a/week1_pie1.html
+++ b/week1_pie1.html
@@ -15,33 +15,14 @@
         height: 100vh;
         font-family: 'DM Sans', sans-serif;
       }
-      .chart-container {
-        position: relative;
-        width: 600px;
-        height: 360px;
-      }
       #chart {
-        width: 100%;
-        height: 100%;
-      }
-      #chart-title {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: #ffffff;
-        font-size: 18px;
-        font-weight: 500;
-        font-family: 'DM Sans', sans-serif;
-        pointer-events: none;
+        width: 800px;
+        height: 500px;
       }
     </style>
   </head>
   <body>
-    <div class="chart-container">
-      <div id="chart"></div>
-      <div id="chart-title">Week 1</div>
-    </div>
+    <div id="chart"></div>
 
     <script>
       google.charts.load("current", { packages: ["corechart"] });
@@ -49,34 +30,32 @@
 
       function drawChart() {
         const data = google.visualization.arrayToDataTable([
-          ["City", "Count"],
-          ["Riyadh", 4],
-          ["Jeddah", 6],
-          ["Dammam", 8],
-          ["Jubail", 2],
-          ["Arar", 3],
-          ["Other", 2],
+          ["City", "North", "South", "East", "West"],
+          ["Riyadh", 6, 3, 2, 1],   // total = 12
+          ["Jeddah", 4, 2, 1, 3],   // example data
+          ["Dammam", 5, 2, 3, 2],
+          ["Jubail", 2, 1, 0, 1],
+          ["Arar", 1, 1, 1, 0]
         ]);
 
         const options = {
           backgroundColor: "#191919",
-          pieHole: 0.55, // donut chart
-          legend: {
-            position: "bottom",
-            textStyle: { color: "#DDDDDD", fontName: "DM Sans", fontSize: 13 }
+          isStacked: true,
+          legend: { textStyle: { color: "#DDDDDD", fontName: "DM Sans", fontSize: 13 } },
+          vAxis: {
+            title: "Requests",
+            textStyle: { color: "#DDDDDD", fontName: "DM Sans" },
+            titleTextStyle: { color: "#FFFFFF", fontName: "DM Sans" },
+            gridlines: { color: "#333" }
           },
-          // Show percentages on slices
-          pieSliceText: "percentage",
-          pieSliceTextStyle: { fontName: "DM Sans", fontSize: 12, color: "#FFFFFF" },
-          // Tooltip shows numbers only
-          tooltip: { text: "value" },
-          chartArea: { width: "80%", height: "70%" },
-          // Softer, distinct colors
-          colors: ["#6DC36D", "#F2C94C", "#5C8DFF", "#9B51E0", "#EB5757", "#828282"],
-          pieSliceBorderColor: "#191919"
+          hAxis: {
+            textStyle: { color: "#DDDDDD", fontName: "DM Sans" }
+          },
+          chartArea: { width: "75%", height: "70%" },
+          colors: ["#6DC36D", "#5C8DFF", "#F2C94C", "#EB5757"], // distinct for N/S/E/W
         };
 
-        const chart = new google.visualization.PieChart(document.getElementById("chart"));
+        const chart = new google.visualization.ColumnChart(document.getElementById("chart"));
         chart.draw(data, options);
       }
     </script>
