--- a/week1_pie1.html
+++ b/week1_pie1.html
@@ -1,118 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="color-scheme" content="dark">
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap" rel="stylesheet">
-  <script src="https://www.gstatic.com/charts/loader.js"></script>
-  <style>
-    :root { --bg:#191919; --fg:#dddddd; --grid:#2a2a2a; }
-    html, body {
-      height: 100%; margin: 0; background: var(--bg);
-      font-family: 'DM Sans', sans-serif;
-    }
-    .wrap {
-      min-height: 100%;
-      display:flex; flex-direction:column;
-      align-items:center; justify-content:center;
-      padding:16px;
-    }
-    h2 {
-      color:#ffffff;
-      font-size:18px;
-      font-weight:500;
-      margin:0 0 12px 0;
-      font-family:'DM Sans', sans-serif;
-    }
-    .box  { width: 100%; max-width: 720px; }
-    #chart { width: 100%; height: 400px; }
-  </style>
-</head>
-<body>
-  <div class="wrap">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="color-scheme" content="dark">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap" rel="stylesheet">
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
+    <style>
+      body {
+        background-color: #191919;
+        margin: 0;
+        font-family: 'DM Sans', sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 100vh;
+      }
+      h2 {
+        color: #fff;
+        font-size: 18px;
+        font-weight: 500;
+        margin-bottom: 12px;
+      }
+      #chart {
+        width: 700px;
+        height: 400px;
+      }
+    </style>
+  </head>
+  <body>
     <h2>Week 1</h2>
-    <div class="box">
-      <div id="chart"></div>
-    </div>
-  </div>
+    <div id="chart"></div>
 
-  <script>
-    google.charts.load('current', {packages:['corechart']});
-    google.charts.setOnLoadCallback(init);
+    <script>
+      google.charts.load("current", { packages: ["corechart"] });
+      google.charts.setOnLoadCallback(drawChart);
 
-    function init() {
-      const rows = [
-        ['Riyadh', 6, 3, 2, 1],  // total 12
-        ['Jeddah', 5, 2, 3, 2],
-        ['Dammam', 7, 1, 3, 2],
-        ['Jubail', 2, 1, 1, 0],
-        ['Arar',   1, 1, 1, 0],
-      ];
+      function drawChart() {
+        // City data: North, South, East, West
+        const data = google.visualization.arrayToDataTable([
+          ["City", "North", "South", "East", "West"],
+          ["Riyadh", 6, 3, 2, 1],
+          ["Jeddah", 5, 2, 3, 2],
+          ["Dammam", 7, 1, 3, 2],
+          ["Jubail", 2, 1, 1, 0],
+          ["Arar",   1, 1, 1, 0]
+        ]);
 
-      const seriesColors = {
-        North: '#6DC36D',
-        South: '#5C8DFF',
-        East:  '#E8C547',
-        West:  '#EB5757'
-      };
+        const options = {
+          backgroundColor: "#191919",
+          isStacked: true,
+          legend: { position: "top", textStyle: { color: "#DDDDDD", fontName: "DM Sans", fontSize: 13 } },
+          vAxis: {
+            title: "Requests",
+            textStyle: { color: "#CCCCCC", fontName: "DM Sans" },
+            titleTextStyle: { color: "#FFFFFF", fontSize: 12, fontName: "DM Sans" },
+            gridlines: { color: "#2a2a2a" },
+            baselineColor: "#2a2a2a"
+          },
+          hAxis: {
+            textStyle: { color: "#DDDDDD", fontName: "DM Sans" }
+          },
+          chartArea: { left: "10%", top: "10%", width: "80%", height: "70%" },
+          colors: ["#6DC36D", "#5C8DFF", "#E8C547", "#EB5757"], // North, South, East, West
+          bar: { groupWidth: "65%" }
+        };
 
-      const data = new google.visualization.DataTable();
-      data.addColumn('string', 'City');
-      const dirs = ['North','South','East','West'];
-      dirs.forEach(()=> data.addColumn('number',''));
-      dirs.forEach(()=> data.addColumn({type:'string',role:'tooltip',p:{html:true}}));
-
-      rows.forEach(r=>{
-        const city=r[0]; const vals=r.slice(1);
-        const total=vals.reduce((a,b)=>a+b,0)||1;
-        const tooltips=vals.map((v,i)=>{
-          const pct=((v/total)*100).toFixed(1);
-          const color=Object.values(seriesColors)[i];
-          return `
-            <div style="padding:6px 8px;color:#fff;background:#1f1f1f;border:1px solid #2c2c2c;border-radius:6px;">
-              <div style="display:flex;align-items:center;gap:6px;margin-bottom:2px;">
-                <span style="width:10px;height:10px;border-radius:2px;background:${color};display:inline-block;"></span>
-                <strong>${city} – ${dirs[i]}</strong>
-              </div>
-              <div>${v} of ${total}</div>
-              <div style="opacity:.8;">${pct}%</div>
-            </div>`;
-        });
-        data.addRow([city, vals[0],tooltips[0], vals[1],tooltips[1], vals[2],tooltips[2], vals[3],tooltips[3]]);
-      });
-
-      const viewCols=[0,1,2,3,4,5,6,7,8,{
-        calc:function(dt,row){
-          return String(dt.getValue(row,1)+dt.getValue(row,3)+dt.getValue(row,5)+dt.getValue(row,7));
-        },
-        type:'string',role:'annotation'
-      }];
-      const view=new google.visualization.DataView(data); view.setColumns(viewCols);
-
-      const options={
-        backgroundColor:'#191919',
-        isStacked:true,
-        animation:{startup:true,duration:800,easing:'out'},
-        legend:{ position:'top', textStyle:{color:'#dddddd',fontName:'DM Sans',fontSize:13} },
-        focusTarget:'category',
-        tooltip:{ isHtml:true },
-        vAxis:{
-          title:'Requests',
-          textStyle:{color:'#cccccc',fontName:'DM Sans'},
-          titleTextStyle:{color:'#ffffff',fontName:'DM Sans',fontSize:12},
-          gridlines:{color:'#2a2a2a'}, baselineColor:'#2a2a2a'
-        },
-        hAxis:{ textStyle:{color:'#dddddd',fontName:'DM Sans'} },
-        chartArea:{ left:'10%', top:'8%', width:'82%', height:'72%' },
-        colors:[seriesColors.North,seriesColors.South,seriesColors.East,seriesColors.West],
-        bar:{groupWidth:'65%'},
-        annotations:{ textStyle:{color:'#ffffff',fontName:'DM Sans',fontSize:11} }
-      };
-
-      const chart=new google.visualization.ColumnChart(document.getElementById('chart'));
-      chart.draw(view, options);
-      window.addEventListener('resize',()=>chart.draw(view,options));
-    }
-  </script>
-</body>
+        const chart = new google.visualization.ColumnChart(document.getElementById("chart"));
+        chart.draw(data, options);
+      }
+    </script>
+  </body>
 </html>
