--- a/week1_pie1.html
+++ b/week1_pie1.html
@@ -10,8 +10,8 @@
     :root { --bg:#191919; }
     html, body { height:100%; margin:0; background:var(--bg); font-family:'DM Sans', system-ui, -apple-system, Segoe UI, Arial, sans-serif; }
     .wrap { min-height:100%; display:flex; align-items:center; justify-content:center; padding:16px; }
-    .box  { width:100%; max-width:680px; }           /* smaller width */
-    #chart { width:100%; height:360px; }             /* smaller height */
+    .box  { width:100%; max-width:660px; }                 /* a bit smaller */
+    #chart { width:100%; height:340px; }                   /* a bit smaller */
   </style>
 </head>
 <body>
@@ -38,20 +38,33 @@
     const west   = rows.map(r=>r[4]);
     const totals = rows.map(r=>r.slice(1).reduce((a,b)=>a+b,0));
 
-    const colors = {
-      North:'#78C889', South:'#6FA8FF', East:'#E6C45A', West:'#F07A7A'
-    };
+    // Soft, distinct palette
+    const colors = { North:'#78C889', South:'#6FA8FF', East:'#E6C45A', West:'#F07A7A' };
 
     const el = document.getElementById('chart');
     const chart = echarts.init(el, null, { renderer:'canvas' });
 
+    const baseBar = {
+      type: 'bar',
+      stack: 'total',
+      barWidth: 22,
+      itemStyle: { borderRadius: [4,4,0,0], opacity: 0.85 },
+      emphasis: {                       // highlight ONLY the hovered item
+        focus: 'self',
+        itemStyle: { opacity: 1, shadowBlur: 10, shadowColor: 'rgba(0,0,0,0.45)' }
+      },
+      blur: {                            // gently dim non-hovered items
+        itemStyle: { opacity: 0.25 }
+      }
+    };
+
     const option = {
       backgroundColor:'#191919',
-      title: { text:'Week 1', left:'center', top:4, textStyle:{ color:'#fff', fontFamily:'DM Sans', fontWeight:500, fontSize:18 }},
-      grid: { left:'8%', right:'6%', top:44, bottom:50 },
+      title: { text:'Week 1', left:'center', top:6, textStyle:{ color:'#fff', fontFamily:'DM Sans', fontWeight:500, fontSize:18 }},
+      grid: { left:'8%', right:'6%', top:50, bottom:48 },
       legend: {
         data:['North','South','East','West'],
-        top:8, right:'6%',
+        top:10,
         textStyle:{ color:'#dddddd', fontFamily:'DM Sans', fontSize:12 },
         itemWidth:14, itemHeight:8
       },
@@ -64,40 +77,43 @@
         type:'value', name:'Requests',
         nameTextStyle:{ color:'#ffffff', fontFamily:'DM Sans', fontSize:12 },
         axisLabel:{ color:'#cccccc', fontFamily:'DM Sans' },
-        splitLine:{ lineStyle:{ color:'#2a2a2a' } }, axisLine:{ show:false }, axisTick:{ show:false }
+        splitLine:{ lineStyle:{ color:'#2a2a2a' } },
+        axisLine:{ show:false }, axisTick:{ show:false }
       },
       tooltip: {
-        trigger:'item',                 // only the hovered segment
+        trigger:'item',                   // only the hovered segment
         axisPointer:{ type:'none' },
         backgroundColor:'#1f1f1f',
         borderColor:'#2c2c2c', borderWidth:1,
         textStyle:{ color:'#ffffff', fontFamily:'DM Sans' },
         formatter: p => `${p.name} — ${p.seriesName}<br/><b>${p.value}</b>`
       },
-      color: [colors.North, colors.South, colors.East, colors.West],
       animationDuration: 900, animationEasing: 'quartOut',
       series: [
-        { name:'North', type:'bar', stack:'total', data:north, barWidth:22, itemStyle:{ borderRadius:[4,4,0,0] } },
-        { name:'South', type:'bar', stack:'total', data:south, barWidth:22, itemStyle:{ borderRadius:[4,4,0,0] } },
-        { name:'East',  type:'bar', stack:'total', data:east,  barWidth:22, itemStyle:{ borderRadius:[4,4,0,0] } },
-        { name:'West',  type:'bar', stack:'total', data:west,  barWidth:22, itemStyle:{ borderRadius:[4,4,0,0] } },
+        { ...baseBar, name:'North', data:north, itemStyle:{ ...baseBar.itemStyle, color:colors.North } },
+        { ...baseBar, name:'South', data:south, itemStyle:{ ...baseBar.itemStyle, color:colors.South } },
+        { ...baseBar, name:'East',  data:east,  itemStyle:{ ...baseBar.itemStyle, color:colors.East  } },
+        { ...baseBar, name:'West',  data:west,  itemStyle:{ ...baseBar.itemStyle, color:colors.West  } },
 
-        // Clean totals above each column (overlay series, no tooltip)
+        // Clean totals above each column (pill labels)
         {
-          name:'TotalLabels',
+          name:'TotalsOverlay',
           type:'bar',
           data: totals,
+          stack:'__overlay__',
           barWidth: 1,
-          z: 10,
-          tooltip: { show:false },
+          barGap:'-100%',
+          silent: true,
           itemStyle: { color:'transparent' },
           label: {
             show:true, position:'top', distance:6,
-            formatter: p => `${totals[p.dataIndex]}`,
-            color:'#ffffff', fontFamily:'DM Sans', fontSize:12
+            formatter: p => totals[p.dataIndex],
+            color:'#ffffff', fontFamily:'DM Sans', fontSize:12,
+            backgroundColor:'rgba(0,0,0,0.55)',
+            padding:[2,6], borderRadius:6
           },
-          // align with columns by fully overlapping
-          barGap:'-100%'
+          tooltip: { show:false },
+          z: 20
         }
       ]
     };
